# oxydized-money-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  docs.yml  test.yml
macros/: Cargo.toml  build.rs
macros/src/: lib.rs
src/: amount.rs  error.rs  lib.rs  result.rs
src/ops/: add.rs  div.rs  eq.rs  mod.rs  mul.rs  neg.rs  sub.rs
