[package]
name = "oxydized-money"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "Library providing data types to manipulate amounts of money in specific currencies and convert amounts between then"
readme = "README.md"
license = "MIT"
keywords = ["currency", "money"]
homepage = "https://github.com/meuter/oxydized-money-rs"
repository = "https://github.com/meuter/oxydized-money-rs"

[dependencies]
iso_currency = "0.4.4"
rust_decimal = "1.34.3"

[workspace]
members = ["macros"]

[dev-dependencies]
assert_matches = "1.5.0"
oxydized-money-macros = { path = "./macros" }
rust_decimal_macros = "1.34.2"
