[package]
name = "oxydized-money-macros"
authors = ["Cédric Meuter <cedric.meuter@gmail.com>"]
version = "0.4.0"
edition = "2021"
description = "Companion library to oxydized-gains providing convenience macros"
readme = "../README.md"
license = "MIT"
keywords = ["currency", "money"]
homepage = "https://github.com/meuter/oxydized-money-rs"
repository = "https://github.com/meuter/oxydized-money-rs"

[dependencies]
rust_decimal_macros = { version = "1.34.2", features = ["reexportable"] }

[build-dependencies]
iso_currency = { version = "0.5.3", features = ["iterator"] }
